Add local ci-cd pipeline

--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -14,7 +14,7 @@ spring.h2.console.path=/h2-console
 spring.jpa.hibernate.ddl-auto=none
 spring.jpa.show-sql=true
 
-# SQL-Skripte von Spring NICHT automatisch ausführen
+# SQL-Skripte von Spring NICHT automatisch ausfÃ¼hren
 spring.sql.init.mode=never
 spring.jpa.defer-datasource-initialization=false
 
